--- a/index.html
+++ b/index.html
@@ -42,26 +42,27 @@
       <square style="left:50%; bottom:0%"></square>
       <square style="left:75%; bottom:0%"></square>
     </div>
-
-    <div class="stack">
-      <pawn class="black" style="bottom:2%;left:2%;"></pawn>
-      <pawn class="black" style="bottom:4%;left:4%;"></pawn>
-      <pawn class="black" style="bottom:6%;left:6%;"></pawn>
-      <pawn class="black" style="bottom:8%;left:8%;"></pawn>
-      <pawn class="black" style="bottom:10%;left:10%;"></pawn>
-      <pawn class="black" style="bottom:12%;left:12%;"></pawn>
-      <pawn class="black" style="bottom:14%;left:14%;"></pawn>
-      <pawn class="black" style="bottom:16%;left:16%;"></pawn>
-    </div>
-    <div class="stack">
-      <pawn class="white" style="bottom:2%;left:2%;"></pawn>
-      <pawn class="white" style="bottom:4%;left:4%;"></pawn>
-      <pawn class="white" style="bottom:6%;left:6%;"></pawn>
-      <pawn class="white" style="bottom:8%;left:8%;"></pawn>
-      <pawn class="white" style="bottom:10%;left:10%;"></pawn>
-      <pawn class="white" style="bottom:12%;left:12%;"></pawn>
-      <pawn class="white" style="bottom:14%;left:14%;"></pawn>
-      <pawn class="white" style="bottom:16%;left:16%;"></pawn>
+    <div id="stackContainer">
+      <div class="stack">
+        <pawn class="black" style="bottom:2%;left:2%;"></pawn>
+        <pawn class="black" style="bottom:4%;left:4%;"></pawn>
+        <pawn class="black" style="bottom:6%;left:6%;"></pawn>
+        <pawn class="black" style="bottom:8%;left:8%;"></pawn>
+        <pawn class="black" style="bottom:10%;left:10%;"></pawn>
+        <pawn class="black" style="bottom:12%;left:12%;"></pawn>
+        <pawn class="black" style="bottom:14%;left:14%;"></pawn>
+        <pawn class="black" style="bottom:16%;left:16%;"></pawn>
+      </div>
+      <div class="stack">
+        <pawn class="white" style="bottom:2%;left:2%;"></pawn>
+        <pawn class="white" style="bottom:4%;left:4%;"></pawn>
+        <pawn class="white" style="bottom:6%;left:6%;"></pawn>
+        <pawn class="white" style="bottom:8%;left:8%;"></pawn>
+        <pawn class="white" style="bottom:10%;left:10%;"></pawn>
+        <pawn class="white" style="bottom:12%;left:12%;"></pawn>
+        <pawn class="white" style="bottom:14%;left:14%;"></pawn>
+        <pawn class="white" style="bottom:16%;left:16%;"></pawn>
+      </div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
