Dynamic board and stack
- add function for board creation
- add function for stack filling
- clear html
- minor css change

--- a/index.html
+++ b/index.html
@@ -24,45 +24,10 @@
     <![endif]-->
   </head>
   <body class="container-fluid">
-    <div class="board">
-      <square style="left:0%; bottom:75%"></square>
-      <square style="left:25%; bottom:75%"></square>
-      <square style="left:50%; bottom:75%"></square>
-      <square style="left:75%; bottom:75%"></square>
-      <square style="left:0%; bottom:50%"></square>
-      <square style="left:25%; bottom:50%"></square>
-      <square style="left:50%; bottom:50%"></square>
-      <square style="left:75%; bottom:50%"></square>
-      <square style="left:0%; bottom:25%"></square>
-      <square style="left:25%; bottom:25%"></square>
-      <square style="left:50%; bottom:25%"></square>
-      <square style="left:75%; bottom:25%"></square>
-      <square style="left:0%; bottom:0%"></square>
-      <square style="left:25%; bottom:0%"></square>
-      <square style="left:50%; bottom:0%"></square>
-      <square style="left:75%; bottom:0%"></square>
-    </div>
+    <div class="board"></div>
     <div id="stackContainer">
-      <div class="stack">
-        <pawn class="black" style="bottom:2%;left:2%;"></pawn>
-        <pawn class="black" style="bottom:4%;left:4%;"></pawn>
-        <pawn class="black" style="bottom:6%;left:6%;"></pawn>
-        <pawn class="black" style="bottom:8%;left:8%;"></pawn>
-        <pawn class="black" style="bottom:10%;left:10%;"></pawn>
-        <pawn class="black" style="bottom:12%;left:12%;"></pawn>
-        <pawn class="black" style="bottom:14%;left:14%;"></pawn>
-        <pawn class="black" style="bottom:16%;left:16%;"></pawn>
-      </div>
-      <div class="stack">
-        <pawn class="white" style="bottom:2%;left:2%;"></pawn>
-        <pawn class="white" style="bottom:4%;left:4%;"></pawn>
-        <pawn class="white" style="bottom:6%;left:6%;"></pawn>
-        <pawn class="white" style="bottom:8%;left:8%;"></pawn>
-        <pawn class="white" style="bottom:10%;left:10%;"></pawn>
-        <pawn class="white" style="bottom:12%;left:12%;"></pawn>
-        <pawn class="white" style="bottom:14%;left:14%;"></pawn>
-        <pawn class="white" style="bottom:16%;left:16%;"></pawn>
-      </div>
+      <div class="stack"></div>
+      <div class="stack"></div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
