--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body class="container">
+  <body class="container-fluid">
 
-    <div id="player1" class="container-fluid"></div>
+    <div id="player1"></div>
 
-    <div class="board-container container-fluid">
+    <div class="board-container">
       <div class="board"></div>
       <div id="stackContainer">
         <div class="stack"></div>
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <div id="player2" class="container-fluid"></div>
+    <div id="player2"></div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
