--- a/index.html
+++ b/index.html
@@ -24,18 +24,15 @@
     <![endif]-->
   </head>
   <body class="container-fluid">
-
-    <div id="player1"></div>
-
-    <div class="board-container">
+    <div class="canvas">
+      <div class="card-stack" id="player1"></div>
       <div class="board"></div>
+      <div class="card-stack" id="player2"></div>
       <div id="stackContainer">
         <div class="stack"></div>
         <div class="stack"></div>
       </div>
     </div>
-
-    <div id="player2"></div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
