--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Ascacou</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- JQuery-UI -->
     <link rel="stylesheet" href="css/jquery-ui.min.css">
@@ -16,12 +15,6 @@
 
     <link rel="stylesheet" href="css/master.css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body class="container-fluid">
     <div class="canvas">
@@ -35,12 +28,12 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <!-- JQuery-ui for drag and drop -->
-    <script src="js/jquery-ui.min.js"></script>
-
-    <script src="js/master.js"></script>
+    <script>
+      var $ = require('./node_modules/jquery/dist/jquery.min.js');
+      var jQuery = $;
+      require('./node_modules/bootstrap/dist/js/bootstrap.min.js');
+      require('./js/jquery-ui.min.js');
+      require('./js/master.js');
+    </script>
   </body>
 </html>
