Seo first commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ascacou</title>
+    <meta name="keywords" content="Ascacou, ascacou,Ulysse, BUONOMO, game, jeu, jeux, réflexion, reflexion, mind">
+    <title>Ascacou, by Ulysse BUONOMO</title>
+
+    <meta name="description" content="Ascacou is a reflexion game for two players.\nAn original idea of Marc Buonomo, now online!">
+    <meta name="author" content="Ulysse BUONOMO">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -24,6 +28,7 @@
     <![endif]-->
   </head>
   <body class="container-fluid">
+	<h1 hidden>Ascacou<h1>
     <div class="canvas">
       <div class="card-stack" id="player1"></div>
       <div class="board"></div>
